k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-store-api
  namespace: test
spec:
  selector:
    app: online-store-api
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
